# NeutrinoTomography

./: CMakeLists.txt  LICENSE  README.md  complex.cpp  complex.h  neutrino_osc.cpp  odeint.cpp  odeint.h  testme.cpp  thematrix.cpp
Apps/: CMakeLists.txt  Nu_EarthCell.cpp  Print_SliceActivity_Long.cpp  Print_SurfaceCells_Long.cpp  RotateEarth.cpp  Run_CalcOscProb_Cell.cpp  Run_NuFlux_Osc.cpp  Run_NuFlux_OscLongitude.cpp  Run_NuFlux_Simple.cpp  Run_NuFlux_SimpleGlobe.cpp  Run_NuFlux_SimpleLong_FixEarth.cpp  Run_NuFlux_SimpleLongitude.cpp  Run_NuProb_OscLongitude.cpp  Run_SaveDetCoords.cpp  test_dearth.cpp  test_neutrinoosc.cpp  testme.cpp
EarthModel/: CMakeLists.txt  DiscreteEarth.cpp  DiscreteEarth.cxx  DiscreteEarth.h  test_dearth.cxx
Julia/: Neutrino_propagation_matter.ipynb  Neutrino_propagation_vacuum.ipynb
NeutrinoOsc/: CMakeLists.txt  README.md  compile.sh  neutrino_osc.cpp  neutrino_osc.h  nrutil.cpp  testme.cpp  thematrix.cpp  thematrix.h
Scripts/: condor_job.submit  plotOnEarth.py  run_job.sh
